// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanGroupProgressIcon component renders with danger variant correctly 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-danger-500 p-xxs"
      data-testid="icon"
    >
      <svg
        data-testid="danger-icon"
      />
    </div>
  </div>
</div>
`;

exports[`PlanGroupProgressIcon component renders with neutral variant correctly 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-neutral-700 p-xxs"
      data-testid="icon"
    >
      <svg
        data-testid="neutral-icon"
      />
    </div>
  </div>
</div>
`;

exports[`PlanGroupProgressIcon component renders with secondary variant correctly 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-secondary-500 p-xxs"
      data-testid="icon"
    >
      <svg
        data-testid="secondary-icon"
      />
    </div>
  </div>
</div>
`;

exports[`PlanGroupProgressIcon component renders with success variant correctly 1`] = `
<div>
  <div
    class="flex"
  >
    <div
      class="flex align-center justify-center grow-0 shrink-0 bg-white outline outline-1 outline-neutral-300 rounded-xs mr-xxs text-success-500 p-xxs"
      data-testid="icon"
    >
      <svg
        data-testid="success-icon"
      />
    </div>
  </div>
</div>
`;
